Fix mobile horizontal scroll
The accessible visually hidden style used for the skip to content links was incorrectly applied to the mobile nav. This introduces a new screen reader only style which prevents the odd width behaviour.

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -22,7 +22,7 @@
 
 // nav
 #main-menu {
-  margin-left: 37px;
+  padding-left: 37px;
   width: 100%;
 
   @media only screen and (min-width: $break-medium) {
